# aoc2019

./: Cargo.toml  test.txt
.github/workflows/: rust.yml
day01/: Cargo.toml
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
output/: day08.out  day10.out  day19.out
src/: intcode.rs
